--- a/plugins/de.cau.cs.kieler.papyrus/plugin.xml
+++ b/plugins/de.cau.cs.kieler.papyrus/plugin.xml
@@ -4,127 +4,127 @@
    <extension
          id="de.cau.cs.kieler.papyrus.layout.class"
          name="Class Diagram Layout"
-         point="de.cau.cs.kieler.kiml.layoutInfo">
-      <option
+         point="de.cau.cs.kieler.kiml.layoutConfigs">
+      <staticConfig
             class="org.eclipse.papyrus.diagram.clazz.edit.parts.ModelEditPart"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.layout.diagrams.classDiagram">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.clazz.edit.parts.ModelEditPart"
             option="de.cau.cs.kieler.spacing"
             value="30.0">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.clazz.custom.edit.part.CPackageEditPart"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.layout.diagrams.classDiagram">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.clazz.custom.edit.part.CPackageEditPart"
             option="de.cau.cs.kieler.spacing"
             value="30.0">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.clazz.custom.edit.part.CModelEditPart"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.layout.diagrams.classDiagram">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.clazz.custom.edit.part.CModelEditPart"
             option="de.cau.cs.kieler.spacing"
             value="30.0">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.clazz.edit.parts.ComponentEditPart"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.layout.diagrams.classDiagram">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.clazz.edit.parts.ComponentEditPart"
             option="de.cau.cs.kieler.spacing"
             value="30.0">
-      </option>
+      </staticConfig>
    </extension>
    <extension
          id="de.cau.cs.kieler.papyrus.layout.useCase"
          name="Use Case Diagram Layout"
-         point="de.cau.cs.kieler.kiml.layoutInfo">
-      <option
+         point="de.cau.cs.kieler.kiml.layoutConfigs">
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.UseCaseDiagramEditPart"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.layout.diagrams.usecaseDiagram">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.UseCaseDiagramEditPart"
             option="de.cau.cs.kieler.spacing"
             value="40.0">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.UseCaseDiagramEditPart"
             option="de.cau.cs.kieler.borderSpacing"
             value="20.0">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.ComponentEditPartTN"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.layout.diagrams.usecaseDiagram">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.ComponentEditPartTN"
             option="de.cau.cs.kieler.spacing"
             value="40.0">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.ComponentEditPartTN"
             option="de.cau.cs.kieler.borderSpacing"
             value="20.0">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.PackageEditPartTN"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.layout.diagrams.usecaseDiagram">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.PackageEditPartTN"
             option="de.cau.cs.kieler.spacing"
             value="40.0">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.diagram.usecase.edit.parts.PackageEditPartTN"
             option="de.cau.cs.kieler.borderSpacing"
             value="20.0">
-      </option>
+      </staticConfig>
    </extension>
    <extension
          id="de.cau.cs.kieler.papyrus.layout.sequence"
          name="Sequence Diagram Layout"
-         point="de.cau.cs.kieler.kiml.layoutInfo">
+         point="de.cau.cs.kieler.kiml.layoutConfigs">
       <diagramType
             id="de.cau.cs.kieler.papyrus.diagrams.sequenceDiagram"
             name="Papyrus Sequence Diagrams">
       </diagramType>
-      <option
+      <staticConfig
             class="org.eclipse.papyrus.uml.diagram.sequence.edit.parts.PackageEditPart"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.papyrus.diagrams.sequenceDiagram">
-      </option>
-      <option
+      </staticConfig>
+      <staticConfig
             class="org.eclipse.papyrus.uml.diagram.sequence.edit.parts.InteractionEditPart"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.papyrus.diagrams.sequenceDiagram">
-      </option>
+      </staticConfig>
    </extension>
    <extension
-         point="de.cau.cs.kieler.kiml.layoutInfo">
-      <option
+         point="de.cau.cs.kieler.kiml.layoutConfigs">
+      <staticConfig
             class="org.eclipse.papyrus.diagram.statemachine.custom.edit.part.CustomPackageEditPart"
             option="de.cau.cs.kieler.diagramType"
             value="de.cau.cs.kieler.layout.diagrams.boxes">
-      </option>
+      </staticConfig>
    </extension>
    <extension
-         point="de.cau.cs.kieler.kiml.ui.layoutManagers">
+         point="de.cau.cs.kieler.kiml.service.layoutManagers">
       <manager
             class="de.cau.cs.kieler.papyrus.MultiPartDiagramLayoutManager"
             priority="-1">
